<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textStyle="bold"
        android:textColor="#467A46"
        android:textSize="25dp"
        android:text="@string/welcome"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:hint="@string/email"/>


    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <CheckBox
        android:id="@+id/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:textColor="#494C49"
        />

    <Button
        android:id="@+id/button_singin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:textColor="#FFFFFF"
        android:background="#488B4B"
        android:text="@string/sing_in"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"/>
        <TextView
            android:id="@+id/textview_singup"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#488B4B"
            android:text="@string/sing_up"/>
    </LinearLayout>

</LinearLayout>

</ScrollView>



